...
                                            child: Padding(
                                              padding: EdgeInsetsDirectional
                                                  .fromSTEB(
                                                      0.0, 16.0, 0.0, 0.0),
                                              child: TextFormField(
                                                key: ValueKey(
                                                    'emailAddress_n8gw'),
                                                controller: _model
                                                    .emailAddressTextController,
                                                focusNode: _model
                                                    .emailAddressFocusNode,
                                                obscureText: false,
                                                decoration: InputDecoration(
...
                                        mainAxisSize: MainAxisSize.max,
                                        mainAxisAlignment:
                                            MainAxisAlignment.center,
                                        children: [
                                          Expanded(
                                            child: TextFormField(
                                              key: ValueKey('password_7vdu'),
                                              controller:
                                                  _model.passwordTextController,
                                              focusNode:
                                                  _model.passwordFocusNode,
                                              obscureText:
                                                  !_model.passwordVisibility,
...
                                                        ? buttonLoginBuildVersionRecordList
                                                            .first
                                                        : null;

                                                return FFButtonWidget(
                                                  key: ValueKey(
                                                      'Button-Login_nb8j'),
                                                  onPressed: () async {
                                                    var _shouldSetState = false;
                                                    _model.getBuildVersion =
                                                        await actions
                                                            .getBuildVersion();
                                                    _shouldSetState = true;
...
