...
                        ),
                      ),
                      Padding(
                        padding: EdgeInsetsDirectional.fromSTEB(
                            12.0, 32.0, 12.0, 0.0),
                        child: PinCodeTextField(
                          key: ValueKey('PinCode_oy64'),
                          autoDisposeControllers: false,
                          appContext: context,
                          length: 6,
                          textStyle: FlutterFlowTheme.of(context)
                              .titleSmall
                              .override(
...
                    ],
                  ),
                ),
                Padding(
                  padding: EdgeInsetsDirectional.fromSTEB(0.0, 24.0, 0.0, 44.0),
                  child: FFButtonWidget(
                    key: ValueKey('Button_w67x'),
                    onPressed: () async {
                      if (!(_model.pinCodeController!.text != '')) {
                        ScaffoldMessenger.of(context).showSnackBar(
                          SnackBar(
                            content: Text(
                              'กรุณาใส่พิน',
...
